--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
 <!doctype html>
-<html lang="en"`>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Play Tailwind</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-  </head>
-  <body>
-    <h1 class="text-3xl font-bold underline">
-      Hello world!
-    </h1>
-  </body>
+<html lang="en" `>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Play Tailwind</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+</head>
+
+<body>
+  <div class="bg-gradient-to-r from-blue-500 to-blue-700 h-screen flex items-center justify-center">
+    <h1 class="text-4xl text-white font-bold">Welcome to Play Tailwind!</h1>
+  </div>
+  <div class="flex items-center justify-center">
+    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md">
+      Button
+    </button>
+  </div>
+  <div class="grid grid-cols-3 gap-3">
+    <div class="row-span-3 bg-white p-3 rounded-md border-2">Cell 1</div>
+    <div class="row-span-2 bg-white p-3 rounded-md border-2">Cell 2</div>
+    <div class="bg-white p-3 rounded-md border-2">Cell 3</div>
+    <div class="bg-white p-3 rounded-md border-2">Cell 4</div>
+    <div class="col-span-2 bg-white p-3 rounded-md border-2">Cell 5</div>
+    <div class="bg-white p-3 rounded-md border-2">Cell 6</div>
+    <div class="bg-white p-3 rounded-md border-2">Cell 7</div>
+    <div class="bg-white p-3 rounded-md border-2">Cell 8</div>
+  </div>
+</body>
+
 </html>
