--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <!-- Header -->
   <div class="bg-gradient-to-r from-blue-500 to-blue-700 h-screen flex items-center justify-center">
     <h1 class="text-4xl text-white font-bold">Welcome to Play Tailwind!</h1>
   </div>
